[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/Settings/Components/UIResolutionSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Settings/UIGeneralSettings.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Settings/Components/UISettingCheckbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Settings/Components/VolumeSlider.gd" type="Script" id=4]

[node name="GeneralSettings" type="VBoxContainer" groups=["save"]]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 289.0
offset_top = 147.0
offset_right = -288.0
offset_bottom = -144.0
script = ExtResource( 2 )

[node name="Video" type="VBoxContainer" parent="."]
offset_right = 447.0
offset_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Video"]
offset_right = 447.0
offset_bottom = 33.0
text = "Video Settings"
align = 1

[node name="HSeparator" type="HSeparator" parent="Video"]
offset_top = 37.0
offset_right = 447.0
offset_bottom = 41.0

[node name="UIResolutionSelector" parent="Video" instance=ExtResource( 1 )]
unique_name_in_owner = true
visible = false
anchor_right = 0.0
offset_left = 0.0
offset_top = 45.0
offset_right = 447.0
offset_bottom = 84.0

[node name="UIFullscreenCheckbox" parent="Video" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
offset_left = 0.0
offset_top = 45.0
offset_right = 447.0
offset_bottom = 86.0
title = "Full Screen"

[node name="UIVsyncCheckbox" parent="Video" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
offset_left = 0.0
offset_top = 90.0
offset_right = 447.0
offset_bottom = 131.0
title = "VSync"

[node name="Spacer" type="Control" parent="."]
offset_top = 142.0
offset_right = 447.0
offset_bottom = 167.0
custom_minimum_size = Vector2( 15, 25 )

[node name="Audio" type="Control" parent="."]
offset_top = 171.0
offset_right = 447.0
offset_bottom = 309.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="Audio"]
offset_top = 4.0
offset_right = 447.0
offset_bottom = 25.0
text = "Audio Settings"
align = 1

[node name="HSeparator2" type="HSeparator" parent="Audio"]
visible = false
offset_top = 29.0
offset_right = 447.0
offset_bottom = 33.0

[node name="GridContainer" type="GridContainer" parent="Audio"]
anchor_top = 0.268116
anchor_right = 1.0
anchor_bottom = 1.23188
offset_bottom = -40.0
theme_override_constants/v_separation = 35
theme_override_constants/h_separation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Audio/GridContainer"]
offset_right = 102.0
offset_bottom = 33.0
text = "Master"

[node name="VolumeSlider" type="HSlider" parent="Audio/GridContainer"]
offset_left = 112.0
offset_right = 447.0
offset_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource( 4 )

[node name="Label2" type="Label" parent="Audio/GridContainer"]
offset_top = 68.0
offset_right = 102.0
offset_bottom = 101.0
text = "Sounds"

[node name="VolumeSlider2" type="HSlider" parent="Audio/GridContainer"]
offset_left = 112.0
offset_top = 68.0
offset_right = 447.0
offset_bottom = 84.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource( 4 )
audio_bus_name = "SFX"

[node name="Label3" type="Label" parent="Audio/GridContainer"]
visible = false
offset_top = 112.0
offset_right = 62.0
offset_bottom = 133.0
text = "Music"

[node name="VolumeSlider3" type="HSlider" parent="Audio/GridContainer"]
visible = false
offset_top = 112.0
offset_right = 218.0
offset_bottom = 128.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource( 4 )
audio_bus_name = "BGM"

[connection signal="toggled" from="Video/UIFullscreenCheckbox" to="." method="_on_UIFullscreenCheckbox_toggled"]
[connection signal="toggled" from="Video/UIVsyncCheckbox" to="." method="_on_UIVsyncCheckbox_toggled"]
